--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,4 +5,8 @@ permalink: /talks/
 author_profile: true
 ---
 
-# Nothing is here
+{% include base_path %}
+
+{% for post in site.teaching reversed %}
+  {% include archive-single.html %}
+{% endfor %}
