--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -8,7 +8,6 @@ author_profile: true
 {% include base_path %}
 
 
-{% for post in site.portfolio %}
-  {% include archive-single.html %}
-{% endfor %}
+<h3> List of Projects </h3>
+
 
