--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -1,13 +1,14 @@
 ---
 layout: archive
-title: "Portfolio"
-permalink: /portfolio/
+title: "Projects"
+permalink: /projects/
 author_profile: true
 ---
 
 {% include base_path %}
 
+<h2>Software Projects</h2>
 
-<h3> List of Projects </h3>
+<h2>Software Projects Supervisions</h2>
 
-
+<h2>Research Projects</h2>
