Update projects.html adding all the projects

--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -8,7 +8,38 @@ author_profile: true
 {% include base_path %}
 
 <h2>Software Projects</h2>
+<ul>
+	<li><a href="https://github.com/cd-dpk/d2dfc">D2D Follow Corona</a></li>
+	<li><a href="https://github.com/cd-dpk/personal_accountant">Transactions Book</a></li>
+	<li><a href="https://github.com/cd-dpk/concept_locator">Concept Locator</a></li>
+	<li><a href="https://github.com/cd-dpk/ramadan_schedule_remote">ramadan_schedule_remote</a></li>
+	<li><a href="https://github.com/cd-dpk/CrickCircleProject">CrickCircleProject</a></li>
+</ul>
 
-<h2>Software Projects Supervisions</h2>
+<h2>Software Projects Supervision</h2>
+<ul>
+	<li><a href="https://github.com/Muntu-ducky26/MatrixIT-spl-">MatrixIT</a></li>
+	<li><a href="https://github.com/IIT-NSTU/KeyType">KeyType</a></li>
+	<li><a href="https://github.com/IIT-NSTU/Space-Explorer">Space-Explorer</a></li>
+	<li><a href="https://github.com/Anwarkabir/dVoting">dVoting</a></li>
+	<li><a href="https://github.com/IIT-NSTU/https://github.com/IIT-NSTU/IITKanbanBoard">IITKanbanBoard</a></li>
+	<li><a href="https://github.com/IIT-NSTU/IIT-Library-2.0">IIT Library 2.0</a></li>
+	<li><a href="https://github.com/IIT-NSTU/chemistry-calculator">Chemistry Calculator</a></li>
+	<li><a href="https://github.com/IIT-NSTU/Coding_Helper">Coding Helper</a></li>
+	<li><a href="https://github.com/IIT-NSTU/Queue-Manager">Queue Manager</a></li>
+	<li><a href="https://github.com/IIT-NSTU/picture-puzzle">Picture Puzzle</a></li>
+	<li><a href="https://github.com/IIT-NSTU/Airplane-sky-force">Airplane Sky Force</a></li>
+</ul>
 
 <h2>Research Projects</h2>
+<ul>
+	<li><a href="https://github.com/cd-dpk/impl-bug-report-classification/">Implementation of Bug Report Classification</a></li>
+	<li><a href="https://github.com/cd-dpk/neighbor-score/">Neighbor Score for COVID-19</a></li>
+	<li><a href="https://github.com/cd-dpk/impl-covid-coverage-newspaper/">COVID-19 Coverage in Newspaper</a></li>
+</ul>
+
+<h2>Other Projects</h2>
+<ul>
+	<li><a href="https://github.com/IIT-NSTU/corona-virus-bd/">corona-virus-bd</a></li>
+</ul>
+<div align="center"> &copy; <a href="https://github.com/cd-dpk">cd-dpk</a></div>
