--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -10,10 +10,10 @@ author_profile: true
 <h2>Software Projects</h2>
 <ul>
 	<li><a href="https://github.com/cd-dpk/d2dfc">D2D Follow Corona</a></li>
-	<li><a href="https://github.com/cd-dpk/personal_accountant">Transactions Book</a></li>
-	<li><a href="https://github.com/cd-dpk/concept_locator">Concept Locator</a></li>
+	<li><a href="https://github.com/cd-dpk/personal_accountant" target="_blank">Transactions Book</a></li>
+	<li><a href="https://github.com/cd-dpk/concept_locator" target="_blank">Concept Locator</a></li>
 	<li><a href="https://github.com/cd-dpk/ramadan_schedule_remote">ramadan_schedule_remote</a></li>
-	<li><a href="https://github.com/cd-dpk/CrickCircleProject">CrickCircleProject</a></li>
+	<li><a href="https://cd-dpk.github.io/CrickCircle/" target="_blank">CrickCircle</a></li>
 </ul>
 
 <h2>Software Projects Supervision</h2>
